apps/production/bite/bite-links-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
  name: bite-links
  namespace: bite
spec:
  rules:
    - host: links.biteapp.nl
      http:
        paths:
          - backend:
              service:
                name: bite-frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - links.biteapp.nl
      secretName: links-biteapp-nl-tls
