apps/production/bite/bite-staging-prod-temp.yaml
# DONT FORGET TO ENABLE DEFAULT INGRESSES AGAIN
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bite-grpc
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: h2c
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: grpc.bite.martijnj.nl
      http:
        paths:
          - backend:
              service:
                name: bite-grpc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - grpc.bite.martijnj.nl
      secretName: grpc-bite-martijnj-nl-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bite-http
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: http.bite.martijnj.nl
      http:
        paths:
          - backend:
              service:
                name: bite-http
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - http.bite.martijnj.nl
      secretName: http-bite-martijnj-nl-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-redirect-bite-grpc
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: h2c
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: grpc.staging.bite.martijnj.nl
      http:
        paths:
          - backend:
              service:
                name: bite-grpc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - grpc.staging.bite.martijnj.nl
      secretName: grpc-staging-bite-martijnj-nl-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-redirect-bite-http
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: http.staging.bite.martijnj.nl
      http:
        paths:
          - backend:
              service:
                name: bite-http
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - http.staging.bite.martijnj.nl
      secretName: http-staging-bite-martijnj-nl-tls
