apps/production/bite/external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bite-external
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: biteapp.nl
      http:
        paths:
          - backend:
              service:
                name: bite-frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - biteapp.nl
      secretName: biteapp-nl-tls
